feat (views): include modal to show taskee location and render partial in table

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,7 @@
-<li class="taskee col s6 offset-s2">
-  <%= user.fullname %>
-</li>
+<tr>
+  <td><%= user.fullname %></td>
+  <td><b><%= skillsets(user) %></b></td>
+  <td>
+    <a class="btn user-map-trigger" data-longitude="<%= user.longitude %>" data-latitude="<%= user.latitude %>" href="#user-location-modal">View</a>
+  </td>
+</tr>
