feat(): edit task creation page
edit price range placeholder

[ #126925351]

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col s12 grey-text"><i>Enter a <b>Price Range</b> or just the Minimum Price</i></div>
+            <div class="col s12 grey-text"><i>Fill in a <b>Price Range</b> or just the Minimum Price</i></div>
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">credit_card</i>
               <input name="task[min_price]" id="min_price" type="text" class="validate" pattern="[0-9]+" required>
