feat(tasker notification) add notification for taskers

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -24,6 +24,10 @@ i.material-icons.prefix.ji {
     bottom: -4px;
 }
 
+.sweet-alert button.cancel {
+  background-color: #eb4D5c !important;
+}
+
 #error_explanation {
   color: red;
   ul {
