--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -26,7 +26,7 @@
                 </td>
                 <% unless task.shared %>
                 <td>
-                <a href="<%= share_contact_path(task) %>" data-id="<%= task.id %>" id="share_contact" class="">Share Contact</a>
+                <a href="<%= share_contact_path(task) %>" data-id="<%= task.id %>" id="share_contact" class="share_contact">Share Contact</a>
                 </td>
                 <% end %>
                 <% elsif task.status.downcase == "inactive" %>
