--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -11,23 +11,6 @@
         </span>
       </a>
       <ul class="right dashboard-navlinks">
-        <% if @count && @count > 0 %>
-        <%= content_tag :li, content_tag(:span, @count), class: "notification-badge"  %>
-        <% end %>
-        <li>
-          <% if current_user.tasker? %>
-          <a href="<%= new_task_path %>" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Task Creation">
-            <i class="material-icons">rate_review</i>
-          </a>
-          <% else %>
-          <!-- <a href="#" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Tasks">
-            <i class="material-icons">rate_review</i>
-          </a> -->
-          <% end %>
-        </li>
-        <li class="notification-dropdown" data-activates="tasks">
-          <%= link_to raw("<i class='material-icons'>notifications_active</i>"), notifications_path, class: "tooltipped", data: { position: "left", delay: "50", tooltip: "Notifications" } %>
-        </li>
         <li>
           <% if current_user && current_user.taskee? %>
           <div class="search-bar">
@@ -35,48 +18,76 @@
               <%= form_tag("/tasks/search", method: "post") do %>
               <%= text_field_tag :need, "", required: "required", placeholder: "Search by any skill", class: "", id: "my-input-field" %>
               <% end %>
-              <% else %>
-              <%= form_tag(search_path, method: "post") do %>
-              <li class="">
-                <span class="search-icon-span left">
-                  <i class="material-icons search-i" id="search">search</i>
-                </span>
-                <%= text_field_tag :searcher, "", required: "required", placeholder: "Search taskees by skillset", id: "my-search-field" %>
-                <% end %>
-                <% end %>
-              </li>
             </div>
           </div>
         </li>
+        <li class="">
+          <span class="search-icon-span left">
+            <i class="material-icons search-i" id="search">search</i>
+          </span>
+        </li>
+        <% end %>
         <li>
-        </ul>
-        <ul id="options" class="dropdown-content">
-          <% if current_user.confirmed %>
-          <li>
-            <%= link_to "Update Profile", profile_path, class: "waves-effect waves-light" %>
-          </li>
+          <% if current_user && current_user.tasker? %>
+          <div class="search-bar">
+            <div class="input-field my-input" id="search-input">
+              <%= form_tag("/tasks/search", method: "post") do %>
+              <%= text_field_tag :need, "", required: "required", placeholder: "Search by any skill", class: "", id: "my-input-field" %>
+              <% end %>
+            </div>
+          </div>
+        </li>
+        <li class="">
+          <span class="search-icon-span left">
+            <i class="material-icons search-i" id="search">search</i>
+          </span>
+        </li>
+        <% end %>
+        <% if @count && @count > 0 %>
+        <%= content_tag :li, content_tag(:span, @count), class: "notification-badge"  %>
+        <% end %>
+        <li class="notification-dropdown" data-activates="tasks">
+          <%= link_to raw("<i class='material-icons'>notifications_active</i>"), notifications_path, class: "tooltipped", data: { position: "left", delay: "50", tooltip: "Notifications" } %>
+        </li>
+        <li>
+          <% if current_user.tasker? %>
+          <a href="<%= new_task_path %>" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Task Creation">
+            <i class="material-icons">rate_review</i>
+          </a>
+          <% else %>
+          <a href="#" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Tasks">
+            <i class="material-icons">rate_review</i>
+          </a>
           <% end %>
-          <li>
-            <%= link_to "Sign Out", signout_path, method: :delete, class: "waves-effect waves-light" %>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <% else %>
-  <header>
-    <nav class="nav-wrapper">
-      <div class="container">
-        <%= link_to "Workdey", root_path, class: "brand-logo" %>
-        <ul class="right">
-          <li>
-            <%= link_to "BECOME A TASKEE", "#", class: "waves-effect waves-light" %>
-          </li>
-          <li>
-            <%= link_to "SIGN IN", signin_path, class: "waves-effect waves-light" %>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <% end %>
+        </li>
+      </ul>
+      <ul id="options" class="dropdown-content">
+        <% if current_user.confirmed %>
+        <li>
+          <%= link_to "Update Profile", profile_path, class: "waves-effect waves-light" %>
+        </li>
+        <% end %>
+        <li>
+          <%= link_to "Sign Out", signout_path, method: :delete, class: "waves-effect waves-light" %>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<% else %>
+<header>
+  <nav class="nav-wrapper">
+    <div class="container">
+      <%= link_to "Workdey", root_path, class: "brand-logo" %>
+      <ul class="right">
+        <li>
+          <%= link_to "BECOME A TASKEE", "#", class: "waves-effect waves-light" %>
+        </li>
+        <li>
+          <%= link_to "SIGN IN", signin_path, class: "waves-effect waves-light" %>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<% end %>
