--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -9,7 +9,7 @@
     <% end %>
     <% if current_user.tasker? %>
       <%= link_to raw("<li class='side-nav-button'>Map Search</li>"), map_search_path %><hr>
-      <%= link_to raw("<li class='side-nav-button'>Taskee Skillsets</li>"), users_path %><hr>
+      <%= link_to raw("<li class='side-nav-button'>Taskee Skillsets</li>"), "/taskees/index" %><hr>
     <% end %>
     <%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %><hr>
     <%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %><hr>
