chore(): add test for dashboard icons
edit get_taskees_byskillset_spec to check for icons
by within nav bar xpath

[ #127445453]

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>
   <header>
-    <nav class="nav-wrapper">
+    <nav class="nav-wrapper" id="nav-wrapper">
       <div class="container">
         <%= link_to "Workdey", dashboard_path, class: "brand-logo" %>
         <a href="#" class="right dropdown" data-activates="options">
