--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -107,6 +107,7 @@ button.btn[disabled] {
 #my-search-field {
   width: 220px;
   border-bottom: none;
+  box-shadow: none;
 }
 .apply{
   color: #eb4D5c !important;
