feat(taskee-bidding): Enable taskees to make bids
- Enable taskees to make bids
- Enable tasker to manage bids

[#126032645]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "styles/choose_role";
 @import "styles/quiz";
 @import "styles/dashboard";
+@import "styles/notifications";
 @import "styles/_users";
 @import "styles/search_result";
 @import "styles/tasks_managements";
@@ -15,5 +16,5 @@
 @import "styles/search";
 @import "styles/tasks";
 @import "styles/profile_meter";
-@import "styles/biddings";
+@import "styles/bids";
 @import "styles/references";
