--- a/app/views/dashboard/tasks/new.html.erb
+++ b/app/views/dashboard/tasks/new.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col m8 offset-m2">
         <h3>Create new Task</h3>
-        <%= form_for @task do |f| %>
+        <%= form_for [:dashboard, @task] do |f| %>
           <%= render "partials/error_msg", object:  @task%>
           <div class="row">
             <div class="input-field col s12">
@@ -70,11 +70,10 @@
                 <i class="material-icons right">send</i>
               </button>
             </div>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div id="google-maps-scripts"></div>
+  <div id="google-maps-scripts"></div>
 </main>
