--- a/app/views/dashboard/tasks/partials/_location.html.erb
+++ b/app/views/dashboard/tasks/partials/_location.html.erb
@@ -1,11 +1,11 @@
-<div class="row">
+<div class="row location-div">
   <div class="col s12">
     <h3>Location</h3>
 
     <div class="row">
-      <div class="location-section col m10 offset-m1">
-        <div class="location-title">
-          <span class="red-text"><%= @task.location %></span>
+      <div class="location-section col s12">
+        <div class="location-title z-depth-1">
+          <span class="brown-text"><%= @task.location %></span>
         </div>
         <div id="task_location_map">
           <span class="hide map-center"><%= @task.location %></span>
