--- a/app/views/dashboard/assign_task.html.erb
+++ b/app/views/dashboard/assign_task.html.erb
@@ -45,8 +45,8 @@
               </div>
 
               <div class="group">
-                <%= f.label :task_desc, "Give a little bit more info about this task:" %>
-                <%= f.text_area :task_desc, placeholder: "EXAMPLE: I have 3 bedrooms and it really needs deep cleaning.", required: true %>
+                <%= f.label :description, "Give a little bit more info about this task:" %>
+                <%= f.text_area :description, placeholder: "EXAMPLE: I have 3 bedrooms and it really needs deep cleaning.", required: true %>
               </div>
             </div>
 
