--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,9 +1,9 @@
-<%= render 'partials/sidebar_dashboard' %>
 <main>
+<%= render 'partials/sidebar_dashboard' %>
   <div class="container">
     <div class="row">
       <div class="col m8 offset-m2">
-        <h3>Create new Task</h3>
+        <h3><%= task_action(@task) %></h3>
         <%= form_for @task do |f| %>
           <%= render "partials/error_msg", object:  @task%>
           <div class="row">
@@ -66,7 +66,7 @@
           </div>
           <div class="row">
             <div class="right">
-              <button class="btn waves-effect waves-light" type="submit">Create Task
+              <button class="btn waves-effect waves-light" type="submit"><%= create_or_update(@task) %>
                 <i class="material-icons right">send</i>
               </button>
             </div>
