--- a/app/views/notifications/_show_information.html.erb
+++ b/app/views/notifications/_show_information.html.erb
@@ -1,4 +1,4 @@
-<div id="modal1" class="modal">
+<div id="modal1" class="modal info_modal">
     <div class="modal-content">
       <h4>Tasker Information</h4>
       <p class="taskee_name">Name: <span id="name"></span></p>
