chore (views): implement reviews on share contact modal

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -18,6 +18,12 @@
     text-align: center;
   }
 }
+.info_status {
+   border: 1px solid green;
+   margin: 0 auto;
+   width: 115px;
+   padding: 5px;
+}
 
 i.material-icons.prefix.ji {
     position: relative;
