feat (views): add share contact column to table

--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -10,6 +10,7 @@
               <td>Tasker</td>
               <td>Description</td>
               <td>Status</td>
+              <td>Share Contact</td>
             </tr>
           </thead>
           <tbody>
