removed partials from everypage and add it to header

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -24,6 +24,16 @@
    width: 115px;
    padding: 5px;
 }
+.side-nav a{
+  color: white !important;
+}
+.sinav{
+  background-color: #767373;
+
+}
+.sidenav-tog{
+  display: inline !important;
+}
 
 i.material-icons.prefix.ji {
     position: relative;
