--- a/app/views/biddings/new.html.erb
+++ b/app/views/biddings/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'partials/sidebar_dashboard' %>
+<%#= render 'partials/sidebar_dashboard' %>
 <section class="main container">
 <% if @bidding.errors.any? %>
  <div id="error_explanation">
