--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   <% end %>
 <main>
-<%= render "partials/sidebar_dashboard" %>
+<%#= render "partials/sidebar_dashboard" %>
   <section class="main container center-align">
     <div class="row">
         <section class="col s6">
