--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -1,4 +1,4 @@
-<%= render 'partials/sidebar_dashboard' %>
+<%#= render 'partials/sidebar_dashboard' %>
 <main>
 <section class="col m9 s12 offset-m3 container search-height">
   <div class="row">
