--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,6 +1,7 @@
 <% if logged_in? %>
   <header>
     <nav class="nav-wrapper" id="nav-wrapper">
+      <a href="#" data-activates="slide-out" class=" sidenav-tog button-collapse"><i class="material-icons">menu</i></a>
       <div class="container">
         <%= link_to "Workdey", dashboard_path, class: "brand-logo" %>
         <a href="#" class="right dropdown" data-activates="options">
@@ -64,6 +65,7 @@
           </li>
         </ul>
       </div>
+      <%= render "partials/sidebar_dashboard" %>
     </nav>
 </header>
 <% else %>
