--- a/app/views/task_managements/index.html.erb
+++ b/app/views/task_managements/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <%= render "partials/sidebar_dashboard" %>
+  <%#= render "partials/sidebar_dashboard" %>
   <div class="row">
     <section class="col m9 offset-m2">
       <h2>Task logs</h2>
