--- a/app/views/taskee_skillsets/index.html.erb
+++ b/app/views/taskee_skillsets/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'partials/sidebar_dashboard' %>
+<%#= render 'partials/sidebar_dashboard' %>
 <section class="main container">
   <div class="row">
     <div class="col m10 offset-m1">
