--- a/app/views/taskees/index.html.erb
+++ b/app/views/taskees/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <%= render 'partials/sidebar_dashboard' %>
+  <%#= render 'partials/sidebar_dashboard' %>
   <section class="main container search-height">
     <div class="row" style="margin-left: 50px">
       <% if @taskees.empty? %>
