--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'partials/sidebar_dashboard' %>
+<%#= render 'partials/sidebar_dashboard' %>
 <main>
   <div class="container">
     <div class="row">
