--- a/app/views/user_plans/index.html.erb
+++ b/app/views/user_plans/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <%= render "partials/sidebar_dashboard" %>
+  <%#= render "partials/sidebar_dashboard" %>
   <section class="main container center-align pricing-plans">
     <div class="row">
       <section class="col s12">
