--- a/app/views/dashboard/search_with_map.html.erb
+++ b/app/views/dashboard/search_with_map.html.erb
@@ -1,5 +1,5 @@
 <main>
-    <%= render "partials/sidebar_dashboard" %>
+    <%#= render "partials/sidebar_dashboard" %>
     <section class="main container center-align map-search">
         <div class="row">
             <div class="col m9 s12">
