--- a/app/views/tasks/search.html.erb
+++ b/app/views/tasks/search.html.erb
@@ -1,4 +1,4 @@
- <%= render 'partials/sidebar_dashboard' %>
+ <%#= render 'partials/sidebar_dashboard' %>
 
 <section class="main container search-height">
 <div class="row" style="margin-left: 50px">
