refactor(bids): refactor feature implementation
[#123036611]

--- a/app/assets/stylesheets/styles/_bids.scss
+++ b/app/assets/stylesheets/styles/_bids.scss
@@ -17,9 +17,7 @@
       color: #fff;
     }
   }
-}
 
-.pagination {
   .waves-effect {
     vertical-align: inherit !important;
   }
@@ -36,16 +34,12 @@
   }
 }
 
-.taskee_reviews {
-  .ratings {
-    .fa {
-      cursor: default;
-      color: transparentize(grey, .7);
+.taskee_reviews > .ratings > .fa {
+  cursor: default;
+  color: transparentize(grey, .7);
 
-      &.yellow-star {
-        color: darken(yellow, 5%);
-      }
-    }
+  &.yellow-star {
+    color: darken(yellow, 5%);
   }
 }
 
