--- a/app/views/dashboard/profile_view.html.erb
+++ b/app/views/dashboard/profile_view.html.erb
@@ -16,6 +16,8 @@
           <% if current_user.tasker? && !params[:taskee_view] %>
             <% id = "WKDY#{@user.id}" %>
             <%= link_to "ASSIGN TASK", assign_task_path(obfuscate(id: @user.id)), class: "btn waves-effect" %>
+          <% else %>
+              <a class="waves-effect waves-light btn" href="/taskees/index"><i class="material-icons left">fast_rewind</i>Back</a>
           <% end %>
         </div>
       </div>
