--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -1,4 +1,4 @@
-<ul id="slide-out" class="side-nav sinav">
+<ul id="slide-out" class="side-nav sinav fixed">
 <%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
 <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
 <%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
