--- a/app/views/dashboard/search_with_map.html.erb
+++ b/app/views/dashboard/search_with_map.html.erb
@@ -2,9 +2,10 @@
     <section class="main container center-align map-search">
         <div class="row">
             <div class="col m9 s12">
-                <div class="card" id="map" style='width: 100%; height: 600px;'></div>
+                <div class="card" id="map" style='width: 100%; height: 600px;'>
+                    <div id="google-maps-scripts"></div>
+                </div>
             </div>
-            <div id="google-maps-scripts"></div>
             <div class="col m3 s12">
                 <br>
                 <span class="hidden" id="marker-location" data-longitude="<%= @current_user.longitude %>" data-latitude="<%= @current_user.latitude %>"></span>
