--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -1,14 +1,19 @@
 <ul id="slide-out" class="side-nav sinav fixed">
-<%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
-<%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
-<%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
-<% if current_user.taskee? %>
-<%= link_to raw("<li class='side-nav-button'>My Skillset</li>"), my_skillsets_path %>
-<%= link_to raw("<li class='side-nav-button'>My References</li>"), dashboard_references_path %>
-<% else %>
-<%= link_to raw("<li class='side-nav-button'>Map Search</li>"), map_search_path %>
-<%= link_to raw("<li class='side-nav-button'>Taskee Skillsets</li>"), taskees_path %>
-<% end %>
-<%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %>
-<%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %>
+    <%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
+    <% if current_user.admin? %>
+      <%= raw("<li class='side-nav-button'>Vet Artisans</li>") %>
+      <%= raw("<li class='side-nav-button'>Certify Artisans</li>") %>
+    <% else %>
+      <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
+      <%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
+      <% if current_user.taskee? %>
+        <%= link_to raw("<li class='side-nav-button'>My Skillset</li>"), my_skillsets_path %>
+        <%= link_to raw("<li class='side-nav-button'>My References</li>"), dashboard_references_path %>
+      <% else %>
+        <%= link_to raw("<li class='side-nav-button'>Map Search</li>"), map_search_path %>
+        <%= link_to raw("<li class='side-nav-button'>Taskee Skillsets</li>"), taskees_path %>
+      <% end %>
+      <%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %>
+      <%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %>
+    <% end %>
 </ul>
