--- a/app/views/certify_artisans/certify_artisans.html.erb
+++ b/app/views/certify_artisans/certify_artisans.html.erb
@@ -10,10 +10,22 @@
         <tr>
           <td> <%= artisan.firstname %></td>
           <td> <%= artisan.lastname %></td>
-          <td><button class='btn btn-primary'>Certify</button></td>
+          <td><button class="waves-effect waves-light btn modal-trigger" href="#rate">Certify</button></td>
         </tr>
         <% end %>
 
       </tbody>
     </table>
   </section>
+
+
+    <!-- Modal Structure -->
+    <div id="rate" class="modal">
+      <div class="modal-content">
+        <h4>Rate Artisan</h4>
+        <p>Vetting Results Here</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
+      </div>
+    </div>
