ft (views): show sign up button on home page and tie it to sign_up path

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -6,5 +6,5 @@
     You recently registered on workdey, to confirm your account, please click on the link below
   </p>
 
-  <%= link_to "Confirm my account", confirm_url(@user.confirm_token, email: @user.email), class: "btn", target: "_blank" %>
+  <%#= link_to "Confirm my account", confirm_url(@user.confirm_token, email: @user.email), class: "btn", target: "_blank" %>
 </div>
