--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -75,7 +75,7 @@
         <%= link_to "Workdey", root_path, class: "brand-logo" %>
         <ul class="right">
           <li>
-            <%= link_to "BECOME A TASKEE", "#", class: "waves-effect waves-light" %>
+            <%= link_to "SIGN UP", signup_path, class: "waves-effect waves-light" %>
           </li>
           <li>
             <%= link_to "SIGN IN", signin_path, class: "waves-effect waves-light" %>
