--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -1,4 +1,8 @@
 <ul id="slide-out" class="side-nav sinav fixed">
+<% if current_user.admin? %>
+<%= link_to raw("<li class='side-nav-button'>Home</li>"), admin_dashboard_path %>
+<%= link_to raw("<li class='side-nav-button'>View Applications</li>"), applications_path %>
+<% else %>
 <%= link_to raw("<li class='side-nav-button'>Home</li>"), dashboard_path %>
 <%= link_to raw("<li class='side-nav-button'>Edit Profile</li>"), profile_path %>
 <%= link_to raw("<li class='side-nav-button'>Biddings</li>"), biddings_path %>
@@ -11,4 +15,5 @@
 <% end %>
 <%= link_to raw("<li class='side-nav-button'>Task logs</li>"), my_tasks_path %>
 <%= link_to raw("<li class='side-nav-button'>Account Upgrade</li>"), user_plans_path %>
+<% end %>
 </ul>
