--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,4 +1,8 @@
 <section class="main container center">
+  <h1>
+    <% user = User.find(@user_id) %>
+    <%= user.firstname%> <%=user.lastname %>
+  </h1>
   <%= form_for @rating, url: ratings_path do |f| %>
     <%= f.label :comment %>
     <%= f.text_field :comment, class: "input-field col s6"%>
