--- a/app/views/layouts/questionnaire.html.erb
+++ b/app/views/layouts/questionnaire.html.erb
@@ -10,7 +10,7 @@
   <%= csrf_meta_tags %>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
-<body class="<%= "#{params[:controller]}-#{params[:action]}"%>">
+<body class="<%= '#{params[:controller]}-#{params[:action]}'%>">
 
   <%= yield %>
 
